--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Biker Brands</title>
 </head>
 <body>  
@@ -28,13 +29,15 @@
                 </ul>
             </div>
         </div>
+        <div class="separator"></div>
         <nav class="main-navbar">
             <a href="/" class="logo-wrapper">
                 <img src="./assets/imgs/BikeBrandLogo.svg" alt="logo">
             </a>
-
+            
+            <div class="toggle-menu"> <i class="small material-icons dehaze">dehaze</i></div>
             <ul class="navbar-menu">
-                <li><a href="#">Home</a></li>
+                <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Products</a></li>
                 <li><a href="#">Featured</a></li>
@@ -50,11 +53,14 @@
                     <h1>Lorem, ipsum dolor.</h1>
 
                     <div class="col-wordings">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, placeat?
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis placeat deserunt hic minima nisi, rem nulla blanditiis necessitatibus? Accusantium enim iusto nesciunt quis libero sint pariatur aspernatur. Modi, assumenda voluptas.
                     </div>
 
                     <div class="cta">
-                        <a href="#">Our Featured Products</a>
+                        <a href="#" class="btn btn-secondary">
+                            <div class="btn-overlay"></div>
+                            <span class="btn-text">Our Featured Products</span>
+                        </a>
                     </div>
                 </div>
                 <div class="col bg-img">
